--- a/org-init.org
+++ b/org-init.org
@@ -51,7 +51,7 @@ Term mode fixes so that I can use normal C-c
     '(progn (term-set-escape-char ?\C-q)
             (define-key term-raw-map (kbd "C-c") nil)))
   (eval-after-load "term"
-    '(define-key term-raw-map (kbd "C-c o") (lambda ()(interactive)(term-send-raw-string "\C-c"))))
+    '(define-key term-raw-map (kbd "C-c C-c") (lambda ()(interactive)(term-send-raw-string "\C-c"))))
 #+END_SRC
 *** Eshell
 Code related to eshell
@@ -79,19 +79,15 @@ Code related to eshell
       (if (not (file-exists-p (expand-file-name (car elems))))
           nil
         (while elems
-          (call-process-shell-command (concat "convert -resize "
-                                              (number-to-string (* 0.75 (window-pixel-height)))
-                                              "x"
-                                              (number-to-string (* 0.75 (window-pixel-width)))
-                                              " "
-                                              (car elems)
-                                              " "
-                                              "/tmp/"
-                                              (car elems)))
+          (call-process-shell-command
+           (concat "scale-down.sh "
+                   (car elems) " "
+                   (number-to-string (* 0.75 (window-pixel-width))) " "
+                   (number-to-string (* 0.75 (window-pixel-height)))))
           (setcar elems (concat "/tmp/" (car elems)))
           (eshell-printn
            (propertize " " 'display (create-image (expand-file-name (car elems)))))
-          (delete-file (car elems))
+          ;;(delete-file (car elems))
           (setq elems (cdr elems)))))) 
 
     (defun eshell/bettercat (filename &rest args)
@@ -126,6 +122,13 @@ Allow dired to delete directories
   (setq dired-recursive-copies (quote always)) ; “always” means no asking
   (setq dired-recursive-deletes (quote top)) ; “top” means ask once
 #+END_SRC
+Show parens
+#+NAME: show-paren
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (show-paren-mode 1)
+  (setq show-paren-delay 0)
+#+END_SRC
+
 Enable line numbers globally.
 #+NAME: linum
 #+BEGIN_SRC emacs-lisp :tangle yes
@@ -406,9 +409,10 @@ Highlights TODO, FIXME etc
 https://github.com/lewang/fic-mode
 #+NAME: fic-mode
 #+BEGIN_SRC emacs-lisp :tangle yes
-  (use-package fic-mode
-    :config
-    (add-hook 'prog-mode-hook #'fic-mode))
+    (use-package fic-mode
+      :config
+      (add-hook 'prog-mode-hook #'fic-mode)
+      (setq fic-highlighted-words '("FIXME" "TODO" "BUG" "XXX" "NOTE" "HACK"))
 #+END_SRC
 **** rainbow-mode
 Display hex colours in their corresponding colour.
@@ -418,6 +422,14 @@ https://julien.danjou.info/projects/emacs-packages
   (use-package rainbow-mode
     :config
     (rainbow-mode 1))
+#+END_SRC
+**** nlinum-hl
+#+NAME: nlinum-hl
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (use-package hlinum-hl
+    :after nlinum
+    :config
+    (add-hook 'nlinum-mode-hook #'nlinum-hl-mode))
 #+END_SRC
 *** Navigation
 **** avy
@@ -529,7 +541,7 @@ https://github.com/joaotavora/yasnippet
     (yas-global-mode 1))
 #+END_SRC
 *** Emacs enhancements
-*** No littering
+**** No littering
 Don't clutter my .emacs.d.
 https://github.com/tarsius/no-littering
 #+NAME: no-littering
@@ -723,11 +735,11 @@ https://github.com/ch11ng/exwm/wiki
     (exwm-input-set-key (kbd "s-t") 'exwm-kahr/terminal)
     ;; Start EXWM
     (require 'exwm-randr)
-    (setq exwm-randr-workspace-output-plist '(0 "VGA-0" 1 "DVI-I-1" 2 "DVI-I-1" 3 "DVI-I-1" 4 "DVI-I-1" 5 "DVI-I-1" 6 "VGA-0" 7 "VGA-0" 8 "VGA-0" 9 "VGA-0"))
+    (setq exwm-randr-workspace-output-plist '(0 "HDMI-0" 1 "DVI-D-1" 2 "DVI-D-1" 3 "DVI-D-1" 4 "DVI-D-1" 5 "DVI-D-1" 6 "HDMI-0" 7 "HDMI-0" 8 "HDMI-0" 9 "HDMI-0"))
     (add-hook 'exwm-randr-screen-change-hook
               (lambda ()
                 (start-process-shell-command
-                 "xrandr" nil "xrandr --output VGA-0 --right-of DVI-I-1 --auto")))
+                 "xrandr" nil "xrandr --output HDMI-0 --right-of DVI-D-1 --auto")))
     (exwm-enable)
     (exwm-randr-enable))
 #+END_SRC
